--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 				<span id="tempC" onClick="changeTemp(this)">C</span>
 				<span id="tempF" onClick="changeTemp(this)">F</span>
 			</div>
+
 		</div>
+		<div class="col-md-12 footer">
+			Design and Codes by <a href="https://dczii.github.io/">DcZII</a>
+			</div>
 	</div>
 </body>
 </html>
