Change weather API.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 			<canvas id="icon1" width="128" height="128"></canvas>
 			<p id="weather_temp"></p>
 			<p id="weather_city"></p>
+			<input class="form-control input-sm" id="city" type="text">
 			<i id="icon2" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
 			<p id="weather"> </p>
-			<button class="btn btn-success" onClick="getLocation()">Get Location</button>
+			<button class="btn btn-success" id="location">Get Location</button>
 
 			<div class="temp_icons">
 				<span id="tempC" onClick="changeTemp(this)">C</span>
