Minor CSS Change

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<img src="https://dczii.github.io/images/logo.png" style="height:50px;width:auto;margin-bottom:20px;" />
 	<div class="row">
-		<div class="col-md-12 weatherContainer">
+		<div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 weatherContainer">
 			<h2>Weather App</h2>
 			<canvas id="icon1" width="128" height="128"></canvas>
 			<p id="weather_temp"></p>
